--- a/ComplaintMS/templates/ComplaintMS/Complaints.html
+++ b/ComplaintMS/templates/ComplaintMS/Complaints.html
@@ -64,7 +64,8 @@ th{
               <a href="/complaints/" class="list-group-item list-group-item-action">Ask Question</a>
               <a href="/list/" class="list-group-item list-group-item-action">UnSolved Question </a>
               <a href="/slist/" class="list-group-item list-group-item-action">Solved Question </a>
-              {% endif %}
+          <a href="/solved/" class="list-group-item list-group-item-action">Certificate</a>
+          {% endif %}
               
 
     
