--- a/ComplaintMS/templates/ComplaintMS/change_password.html
+++ b/ComplaintMS/templates/ComplaintMS/change_password.html
@@ -36,6 +36,7 @@
               <a href="/complaints/" class="list-group-item list-group-item-action">Ask Question</a>
                <a href="/list/" class="list-group-item list-group-item-action">UnSolved Questions</a>
               <a href="/slist/" class="list-group-item list-group-item-action">Solved Questions</a>
+          <a href="/solved/" class="list-group-item list-group-item-action">Certificate</a>
               {% endif %}
               
       </div>
