--- a/ComplaintMS/templates/ComplaintMS/counter.html
+++ b/ComplaintMS/templates/ComplaintMS/counter.html
@@ -65,6 +65,7 @@ th{
               
               <a href="/allcomplaints/" class="list-group-item list-group-item-action">All Question</a>
               <a href="/solved/" class="list-group-item list-group-item-action">Solved Question</a>
+<a href="/solved/" class="list-group-item list-group-item-action">Certificate</a>
 
               {% endif %}
               
