--- a/ComplaintMS/templates/ComplaintMS/solved.html
+++ b/ComplaintMS/templates/ComplaintMS/solved.html
@@ -38,7 +38,7 @@ th{
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>All Complaints</title>
+  <title>All Questions</title>
    
   <!-- Bootstrap core CSS -->
   <link href= "{% static "ComplaintMS/extra/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -113,7 +113,7 @@ th{
 </ul>
       <div class="container-fluid">
       <div class="card-body bg-light">
-        <h1 class="mt-4 text-dark"><b>Solved Complaints</h1>
+        <h1 class="mt-4 text-dark"><b>Solved Questions</h1>
         <br>
     
     <div class="table-responsive">
@@ -130,7 +130,7 @@ th{
 	  <th class="th-sm  text-dark">Subject
 
     
-      <th class="th-sm  text-dark">Complaint Type
+      <th class="th-sm  text-dark">Question Type
 
       </th>
       <th class="th-sm-12  text-dark">Issued date
