--- a/ComplaintMS/templates/ComplaintMS/about.html
+++ b/ComplaintMS/templates/ComplaintMS/about.html
@@ -32,10 +32,13 @@ img{
 <div class="card bg-warning text-white">
     
                 <div class="ml-3">
-                <p style="color:white; font-size:40px;"> <b>GEyan</b></p>
+                <p style="color:white; font-size:40px;"> <b>Complaint Management System</b></p>
         <p style="color:white; text-align:justify;">
 
-
+                 Complaint Management System is a mechanism to receive and act on complaints and grievances reported by customers of a private organization or public citizens accessing a government (G2C) service.
+            
+             Grievance Redressal may be handled directly by organizations through their own websites or through call centers. A new innovation is smart web portals for grievance processing, connecting customers and action-takers directly through ICT media such as email.
+           
                 </p>
   </div>
 <br>
@@ -53,7 +56,7 @@ img{
 <div class="card text-dark" style="width: 18rem;">
   <img src="{% static 'ComplaintMS/img/form.png' %}" class="img-rounded" alt="Cinque Terre">
   <div class="card-body">
-    <p class="card-text">Submit/Receive Question</p>
+    <p class="card-text">Submit/Receive Feedback</p>
   </div>
 </div>
 </div>
