--- a/ComplaintMS/templates/ComplaintMS/change_password.html
+++ b/ComplaintMS/templates/ComplaintMS/change_password.html
@@ -33,10 +33,9 @@
               <a href='/dashboard/' class="list-group-item list-group-item-action">Profile</a>
               <a href='/password/' class="list-group-item list-group-item-action">Password Reset</a>
 
-              <a href="/complaints/" class="list-group-item list-group-item-action">Ask Question</a>
-               <a href="/list/" class="list-group-item list-group-item-action">UnSolved Questions</a>
-              <a href="/slist/" class="list-group-item list-group-item-action">Solved Questions</a>
-          <a href="/solved/" class="list-group-item list-group-item-action">Certificate</a>
+              <a href="/complaints/" class="list-group-item list-group-item-action">Add Feedback</a>
+               <a href="/list/" class="list-group-item list-group-item-action">UnSolved Feedback</a>
+              <a href="/slist/" class="list-group-item list-group-item-action">Solved Feedback</a>
               {% endif %}
               
       </div>
