--- a/ComplaintMS/templates/ComplaintMS/dashboard.html
+++ b/ComplaintMS/templates/ComplaintMS/dashboard.html
@@ -13,7 +13,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>All Question</title>
+  <title>All Feedback</title>
    
   <!-- Bootstrap core CSS -->
   <link href= "{% static "ComplaintMS/extra/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -36,9 +36,10 @@
               <a href='/dashboard/' class="list-group-item list-group-item-action">Profile</a>
               <a href='/password/' class="list-group-item list-group-item-action">Password Reset</a>
 
-              <a href="/complaints/" class="list-group-item list-group-item-action">Ask Question </a>
-               <a href="/list/" class="list-group-item list-group-item-action">UnSolved Question</a>
-              <a href="/slist/" class="list-group-item list-group-item-action">Solved Question</a>
+              <a href="/complaints/" class="list-group-item list-group-item-action">Add Feedback </a>
+               <a href="/list/" class="list-group-item list-group-item-action">UnSolved Feedback</a>
+              <a href="/slist/" class="list-group-item list-group-item-action">Solved Feedback</a>
+          <a href="/certificate/" class="list-group-item list-group-item-action">Certificate</a>
 
               {% endif %}
               
