--- a/ComplaintMS/templates/ComplaintMS/home.html
+++ b/ComplaintMS/templates/ComplaintMS/home.html
@@ -56,7 +56,7 @@ img{
 <div class="card text-dark" style="width: 18rem;">
   <img src="{% static 'ComplaintMS/img/form.png' %}" class="img-rounded" alt="Cinque Terre">
   <div class="card-body">
-    <p class="card-text">Submit/Receive Question</p>
+    <p class="card-text">Submit/Receive Feedback</p>
   </div>
 </div>
 </div>
@@ -64,7 +64,7 @@ img{
 <div class="card text-dark" style="width: 18rem;">
   <img src="{% static 'ComplaintMS/img/solved.png' %}" class="img-rounded" alt="Cinque Terre">
   <div class="card-body">
-    <p class="card-text">Solve Question</p>
+    <p class="card-text">Solve Feedback</p>
   </div>
 </div>
 </div>
@@ -72,7 +72,7 @@ img{
 <div class="card text-dark" style="width: 18rem;">
    <img src="{% static 'ComplaintMS/img/bars.png' %}" class="img-rounded" alt="Cinque Terre">
   <div class="card-body">
-    <p class="card-text">Get the Stats of the Question</p>
+    <p class="card-text">Get the Stats of the Feedback</p>
   </div>
 </div><!--Ayush Arya -->
 </div>
