--- a/ComplaintMS/templates/ComplaintMS/solvedcomplaint.html
+++ b/ComplaintMS/templates/ComplaintMS/solvedcomplaint.html
@@ -64,7 +64,9 @@ th{
               <a href="/complaints/" class="list-group-item list-group-item-action">Add Complaints</a>
               <a href="/list/" class="list-group-item list-group-item-action">UnSolved Complaints</a>
               <a href="/slist/" class="list-group-item list-group-item-action">Solved Complaints</a>
-              {% endif %}
+              <a href="/certificate/" class="list-group-item list-group-item-action">Certificate</a>
+
+          {% endif %}
               
 
     
