--- a/ComplaintMS/templates/ComplaintMS/comptotal.html
+++ b/ComplaintMS/templates/ComplaintMS/comptotal.html
@@ -13,7 +13,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>All Question</title>
+  <title>All Feedback</title>
    
   <!-- Bootstrap core CSS -->
   <link href= "{% static "ComplaintMS/extra/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
@@ -35,9 +35,9 @@
               <a href='/dashboard/' class="list-group-item list-group-item-action">Profile</a>
               <a href='/password/' class="list-group-item list-group-item-action">Password Reset</a>
 
-              <a href="/complaints/" class="list-group-item list-group-item-action">Ask Question </a>
-              <a href="/list/" class="list-group-item list-group-item-action">UnSolved Question's</a>
-              <a href="/slist/" class="list-group-item list-group-item-action">Solved Question's</a>
+              <a href="/complaints/" class="list-group-item list-group-item-action">Add Feedback</a>
+              <a href="/list/" class="list-group-item list-group-item-action">UnSolved Feedback</a>
+              <a href="/slist/" class="list-group-item list-group-item-action">Solved Feedback</a>
 
               {% endif %}
               
@@ -60,7 +60,7 @@
 		            <div class="row">
 		         <!--Ayush Arya -->
 		                <div class="col-md-12">
-		                    <h4 class="text-dark"><b>Ask Question :</b></h4>
+		                    <h4 class="text-dark"><b>Add Feedback :</b></h4>
 													
 		                    <hr>
 												<div class="row m-1">
